NEXT UNRELEASED
- Fix schwartzmon error. RT #104046

1.12 Mon Mar 30 2015
- Fix replace_job hanging & postgresql issues. RT #65712
- Add strict_remove_ability to prevent auto resetting of abilities.
- Stricter job check. https://github.com/jfearn/TheSchwartz/pull/1
- Add accessor methods for strict_remove_ability.
- Add debug message to mark_database_as_dead. RT #102510

1.11 Mon Nov 03 2014
- Move from Make to Module::Build
- Remove inc & autobuild
- Add perltidyrc and run over all perl files.
- Add perlcritic test & fix errors
- Add Test::Spelling and fix all spelling errors in POD. RT #89165
- Reorder jobs when prioritize is set. RT #99075
- Fix wrong return precedence. RT #87222
- Fix get_server_time for Oracle. # RT #58049
- Support Data::ObjectDriver->get_dbh. RT #50022
- Use sort by jobid on selects. RT #34843
- Added floor methods to limit priortity job selection. RT #50842
- Add batch_size methods to expose FIND_JOB_BATCH_SIZE. RT #72815
- Add run_after param to decline. RT #60797
- Add jobid param to list_jobs. 

1.10 (2010-03-15)
- Add $job->declined method for workers to be able to decline handling
  a job at this time.
- Added $client->grab_and_work_on($handle) to securely work on a job 
  you know the handle of. Yann Kerherve (yannk@cpan.org)
- Fixed docs and tests (miyagawa, athomason, simonw)
    
1.07 (2008-07-31)
- bchoate: Updates to support optional prioritization of jobs.
- ykerherve: Croak with a nice message id a driver cannot be
  found for a handle

1.06 (2007-09-07)
- Code to allow a 'top' like view of runnin schwartz workers.
- include postgres schema in docs.  from Michael Zedeler
  <michael@zedeler.dk>  Currently not tested in regression
  tests, though, so not "officially" supported yet.
- start of work on gearman-based schwartz server.

1.05

- Set TheSchwartz::Job::insert_time to current server time when
  inserting a new job.

1.04 (2007-05-22)

- no code changes, just packaging/dep/test fixes, as pointed out