@@ -56,3 +56,4 @@ xt/perlcritic.t
 xt/pod-coverage.t
 xt/pod-spelling.t
 xt/pod.t
+META.json
